# BU-SHITU-OH_hackukosen2025

./: .cursorrules  .firebaserc  LICENSE  README.md  assets.csv  components.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json
Arduino/: stepping_motor.ino
Arduino/stepping_motor/: readme.md  stepping_motor.ino
Challenge_Panel/: README.md  package-lock.json  package.json  vite.config.ts
Python/: annotation.py  bushituoh.py  main.py  pyproject.toml  test.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/attendance/: page.tsx
components/: theme-toggle-button.tsx  theme-toggle.tsx
contexts/: AuthContext.tsx
docs/: APIテスト手順.md  APIテスト結果.md  API実装完了.md  Firebase設定手順.md  Firebase認証トークン取得方法.md  Firestoreインデックス設定手順.md  Google認証設定手順.md  ICカード登録フロー.md  api-design.md  アプリ仕様.md  キャラクター設定ガイド.md  システム概要.md  ハードウェア統合ガイド.md  モックデータ作成手順.md  レース完了API.md  環境変数設定手順.md  要件定義書.md
hardware/: README.md  auto_complete_race.py  daily_login_bonus.py  nfc_card_registration.py  test_api.py  test_nfc_login_api.py
hooks/: useAttendance.ts  useAuth.ts  usePointHistory.ts  useRace.ts  useRanking.ts  useUserPoints.ts
lib/: firebase-admin.ts  firebase.ts  loginBonus.ts
rasp-app/: .env.example  .gitignore  README.md  README_INTEGRATION.md  index.html  package-lock.json  package.json
rasp-app/backend/: .env.example  FIREBASE_SETUP.md  README.md  config.example.py  main.py  pyproject.toml  requirements.txt
scripts/: clear-mock-data.ts  seed-mock-data.ts  test-api.sh
types/: attendance.ts  character.ts  point.ts  race.ts  transfer.ts  user.ts
(+70 files in other folders)
