[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "firebase-admin>=7.1.0",
    "nfcpy>=1.0.4",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
